Fixing dark mode color

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -66,6 +66,6 @@ thead, tfoot, tr:nth-child(even) { background: #eee; }
   body { background-color: #27272A; color: #eee; }
   h1.site-title a {color: #eee;}
   a { color: #fff; }
-  blockquote, th, tr:nth-child(2n), .article-meta, .menu a { color: #27272A; }
+  blockquote, th, tr:nth-child(2n), .article-meta a { color: #27272A; }
   pre{ box-shadow: 5px 5px 5px #27272a; }
 }
